--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,20 @@
-title: "Remote theme example"
+title: "Random notes, available anywhere I can git clone."
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://edseek.com" # the base hostname & protocol for your site, e.g. http://example.com
+
 remote_theme: pmarsceill/just-the-docs
 #color_scheme: "dark"
 search_enabled: false
 
 aux_links:
+  "LinkedIn":
+    - "//linkedin.com/in/jboxman"
   "GitHub":
     - "//github.com/jboxman"
 
-footer_content: "Copyright 2020 Jason Boxman."
+footer_content: "Copyright &copy; 2020 Jason Boxman. Distributed by an <a href=\"https://raw.githubusercontent.com/jboxman/jboxman.github.io/master/LICENSE\">MIT license</a>."
 
 ga_tracking: UA-78244275-1
 
+permalink: pretty
+exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
