--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "Random notes, available anywhere I can git clone."
-baseurl: "/" # the subpath of your site, e.g. /blog
+title: "Random notes"
+#baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://edseek.com" # the base hostname & protocol for your site, e.g. http://example.com
 
-remote_theme: pmarsceill/just-the-docs
+theme: "just-the-docs"
 #color_scheme: "dark"
 search_enabled: false
 
@@ -17,4 +17,4 @@ footer_content: "Copyright &copy; 2020 Jason Boxman. Distributed by an <a href=\
 ga_tracking: UA-78244275-1
 
 permalink: pretty
-exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
+exclude: ["_site/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
