--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: "Random notes"
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://edseek.com" # the base hostname & protocol for your site, e.g. http://example.com
 
-theme: "just-the-docs"
+remote_theme: pmarsceill/just-the-docs
+#theme: "just-the-docs"
 #color_scheme: "dark"
 search_enabled: false
 
