--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Random notes"
+title: "Docs & posts"
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://edseek.com" # the base hostname & protocol for your site, e.g. http://example.com
 
