--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.cache
+.github
 _site
 .DS_Store
 .jekyll
@@ -7,6 +9,6 @@ _site
 Gemfile
 Gemfile.lock
 node_modules
-package.json
 .vscode/
 .jekyll-cache/
+public/
