--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^5.0.0",
     "gatsby": "^4.24.6",
     "gatsby-plugin-feed": "^4.24.0",
+    "gatsby-plugin-google-gtag": "^4.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
