--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^6.0.2",
     "gatsby": "^5.0.1",
     "gatsby-plugin-feed": "^5.0.0",
+    "gatsby-plugin-google-gtag": "^4.24.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-sitemap": "^6.0.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
