--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@lekoarts/gatsby-theme-minimal-blog": "^5.0.0",
+    "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.24.6",
     "gatsby-plugin-feed": "^4.24.0",
     "gatsby-plugin-google-gtag": "^4.24.0",
